methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase: error: not found: value growFlowers
		growFlowers();
                ^FlowerCase:24: error: not found: value flower
  flower(Color.BLUE)
  ^FlowerCase:31: error: not found: value flower
  flower(Color.BLUE)
  ^